# kaizen-atlas

./: .env.example  .gitignore  pyproject.toml  simulate_may_revenue.py
.claude/: launch.json
.github/workflows/: monthly-refresh.yml
atlas/: config.py  server.py  snapshot.py
atlas/dashboard/: index.html
atlas/labor/: constants.py  engine.py  toggl_pull.py
atlas/margin/: constants.py  engine.py  models.py
atlas/revenue/: classifier.py  constants.py  engine.py  stripe_pull.py
atlas/software/: constants.py  engine.py  xero_pull.py
data/: xero_june_2026.json
docs/: BUILD_SPEC.md  HANDOFF.md  SOFTWARE_ALLOCATION_KEY.md
docs/prototype/: may_prototype.html
scripts/: debug_agency.py  debug_char.py  debug_descriptions.py  debug_invoice_memo.py  debug_pegasus.py  debug_toggl_clients.py  inject_xero.py  may2026_audit.py  may2026_sim.py  may2026_simulation.py  refresh.py  xero_auth.py
tests/: test_labor_engine.py  test_margin_engine.py  test_revenue_engine.py  test_software_engine.py
tests/fixtures/: kaizen_atlas_fixtures.json
