[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kaizen-atlas"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "stripe>=10.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
